fix: variable names have been corrected

--- a/public/index.html
+++ b/public/index.html
@@ -50,37 +50,47 @@
       </div>
 
       <div class="game-board">
-        <div class="dashboard"></div>
+        <h3 class="dashboard"></h3>
         <div class="grid-one"></div>
         <div class="grid-two"></div>
       </div>
       <div class="my-ships">
         <button class="orientation">Horizontal</button>
         <div
+          tabindex="0"
           class="ship"
           id="battleship"
           data-id="battleship"
           data-length="4"
         ></div>
         <div
+          tabindex="0"
           class="ship"
           id="cruiser-one"
           data-id="cruiser-one"
           data-length="3"
         ></div>
         <div
+          tabindex="0"
           class="ship"
           id="cruiser-two"
           data-id="cruiser-two"
           data-length="3"
         ></div>
         <div
+          tabindex="0"
           class="ship"
           id="destroyer"
           data-id="destroyer"
           data-length="2"
         ></div>
-        <div class="ship" id="boat" data-id="boat" data-length="1"></div>
+        <div
+          tabindex="0"
+          class="ship"
+          id="boat"
+          data-id="boat"
+          data-length="1"
+        ></div>
       </div>
     </div>
   </body>
