feat: implemented method for starting a new game

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
       <div class="sidebar">
         <h1>BATTLESHIP</h1>
         <button class="start">START</button>
+        <button class="restart">RESTART</button>
       </div>
       <div class="menu">
         <button class="bot">Play vs Bot</button>
