style: minor style changes

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
       </div>
 
       <div class="game-board">
-        <h3 class="dashboard"></h3>
+        <h3 class="dashboard">Welcome to the Battleships game!</h3>
         <div class="grid-one"></div>
         <div class="grid-two"></div>
       </div>
